--- a/Javascript/Projects/To-Do App/style.css
+++ b/Javascript/Projects/To-Do App/style.css
@@ -10,6 +10,13 @@ body {
     text-align: center;
 } */
  .container {
-    color: white;
+    background-color: aliceblue;
+    color: black;
     border: 1px solid red;
+    /* width: fit-content; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
  }
