--- a/Javascript/Projects/Multiplication Quiz Webapp/style.css
+++ b/Javascript/Projects/Multiplication Quiz Webapp/style.css
@@ -13,10 +13,11 @@ body {
     align-items: center;
     text-align: center;
     flex-direction: column;
+    background-color: aqua;
 }
 
 h1{
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 700;
     margin-bottom: 20px;
     color: green;
@@ -29,15 +30,15 @@ h3
     margin: -10px 0 20px;
 } 
 #form {
-    padding: 10px 20px;
-    margin: 10px;
+    padding: 12px 22px;
+    margin: 15px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 #score {
-    font-size: 18px;
+    font-size: 28px;
     text-align: right;
     font-weight: 700;
     color: green;
@@ -46,7 +47,7 @@ h3
 #question {
     color: green;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 32px;
 }
 
 #inp {
@@ -83,4 +84,5 @@ h3
     text-align: center;
     color: white;
     letter-spacing: 1px;
+    cursor: pointer;
 }
